--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "modernclinic",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,14 +19,15 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^8.2.1",
-    "firebase-admin": "^13.6.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
+    "razorpay": "^2.9.6",
     "uuid": "^13.0.0",
     "validator": "^13.15.23"
   }
 }
+
