--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "razorpay": "^2.9.6",
     "uuid": "^13.0.0",
     "validator": "^13.15.23"
   }
 }
-
